missing return value results in ud2 instruction when compiled with clang

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
         "compile": {
             "opt": "-O0",
             "debug": "-g",
-            "warning": "-Wunused-parameter -Wunused-variable -Wunused-private-field -Wunused-const-variable",
+            "warning": "-Wall",
             "std": "-std=c++17",
             "boost": "-Ithird-party/boost_1_77_0",
             "tbb": "-Ithird-party/tbb/include",
